--- a/conf/server.conf
+++ b/conf/server.conf
@@ -1,10 +1,13 @@
 #配置文件
 #注:配置文件的各属性声明需有序
-#顺序如下:
-#	1）服务器ip
-#	2）服务器端口号port
+#	顺序如下:
+#		1)服务器ip
+#  		2)服务器端口号port
+#  		3)线程池开启线程数
 
 #服务器ip
 127.0.0.1
 #服务器端口号
 8800
+#线程池开启线程数
+1
