--- a/conf/server.conf
+++ b/conf/server.conf
@@ -6,8 +6,13 @@
 #  		3)线程池开启线程数
 
 #服务器ip
-127.0.0.1
+#127.0.0.1
+192.168.1.20
 #服务器端口号
 8800
 #线程池开启线程数
-1
+4
+#词库地址
+/home/kevin/MyProjects/SpellChecker/data/segresult.txt
+#匹配TopK的单词
+5
